# DailyReport

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  tauri.conf.json
.github/workflows/: qt-build.yml  tauri-build.yml
docs/: API接口文档.md
docs/superpowers/plans/: 2026-03-11-work-hours-app-verification.md  2026-03-12-qt-rewrite.md  2026-03-13-sync-logic-fix.md  2026-03-14-api-documentation.md  2026-03-14-sync-flow-fix.md  2026-03-14-sync-logic-refactor.md  2026-03-19-edit-duration.md  2026-03-20-remember-password.md  2026-03-20-ui-animation.md  2026-03-24-mcp-ui-test-plan.md  2026-03-25-main-window-layout-simplification-plan.md
docs/superpowers/specs/: 2026-03-13-sync-logic-fix.md  2026-03-14-sync-flow-fix-design.md  2026-03-14-sync-logic-refactor.md  2026-03-19-edit-duration-design.md  2026-03-20-remember-password-design.md  2026-03-20-ui-animation-design.md  2026-03-24-material-ui-design.md  2026-03-24-mcp-ui-test-design.md  2026-03-25-main-window-layout-simplification-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  utils.ts  vite-env.d.ts
package/linux/: deploy.sh
package/windows/: deploy.ps1
qt-app/: README.md
qt-app/package/linux/: README.md
qt-app/package/macos/: README.md
qt-app/resources/: mainwindow.ui
qt-app/src/: datamodel.cpp  sessionmanager.cpp
src/: animatedlabel.cpp  animatedlabel.h  animatedlistwidget.cpp  animatedlistwidget.h  animationutils.cpp  animationutils.h  apimanager.cpp  apimanager.h  cloudsessionmanager.cpp  cloudsessionmanager.h  datamodel.cpp  datamodel.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  ripplebutton.cpp  ripplebutton.h  sessionmanager.cpp  sessionmanager.h  utils.cpp  utils.h
src-tauri/: .gitignore  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  models.rs  storage.rs  time_tracker.rs
src-tauri/tests/: test_models.rs
tests/: .qmake.stash  Makefile  moc_apimanager.cpp  moc_cloudsessionmanager.cpp  moc_logindialog.cpp  moc_predefs.h  test_animation_widgets.cpp  test_apimanager.cpp  test_duration_bug.cpp  test_e2e.cpp  test_edit_duration.cpp  test_elapsed_timer.cpp  test_empty_start.cpp  test_login  test_login.cpp  test_login.moc  test_remember_password.cpp  test_session_date.cpp  tests.pro
tests/ui/: README.md  ui-test-prompt.md
