[package]
name = "daily_report"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.2", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
tauri-plugin-window-state = "2.2"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[[test]]
name = "test_models"
path = "src-tauri/tests/test_models.rs"

[[test]]
name = "test_time_tracker"
path = "src-tauri/tests/test_time_tracker.rs"
